# learningzone

agenticai/hello_langchain/: .env  basic_tools.ipynb  basic_tools1.ipynb  gs_test.py  prompt_template.ipynb  prompt_templete1.ipynb  pyproject.toml  test1.ipynb  tools_contd.ipynb  tools_contd1.ipynb
agenticai/vertex-langchain-demo/: main.py  pyproject.toml
agenticai/vertex-langchain-demo/hello_langchain/: .env  basic_tools.ipynb  gcp_test.py  hello_langgraph.code-workspace  prompte_templates.ipynb  pyproject.toml  toolscontd.ipynb
deepagent/async_subagent_demo/: .env  AGENTS.md  communication.py  context.py  langgraph.json  main.py  programming.py  pyproject.toml  reasoning.py  schemas.py  tools.py  utils.py
deepagent/async_subagent_demo/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl  store.pckl
deepagent/async_subagent_demo/agent_workspace/: answers.md  communications.json  explanations.md  programming.json  questions.md  reasoning.json  todos.md
deepagent/understanding-deepagents/: .env  backend1.py  backend2.py  books_search_tools.py  detailed_skills_demo.py  hello_subagent.py  internet_search_tools.py  langgraph.json  main.py  prebuilt_pii.py  pyproject.toml  question_paper_agent.py  question_paper_agent_response_format.py  skills_demo.py  test.py  tododemo.py  tools.py  utils.py  withsimpletools.py
deepagent/understanding-deepagents/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
deepagent/understanding-deepagents/agent_workspace/: article.md  notes.md  roughnotes.md  todos.md
deepagent/understanding-deepagents/agnet_workspace/: book-search-agent_response.middleware  book-search-agent_response.middleware=  subagent_todos.md  web-search-agent_response.middleware
deepagent/understanding-deepagents/new_agent_workspace/todos/: solar-system.md  (+1 more)
deepagent/understanding-deepagents/question_paper_agent_response_format_workspace/: english.json  english.md  explanations.md  gk.json  gk.md  numerical-ability.json  numerical-ability.md  questions.md  reasoning.json  reasoning.md  science.json  science.md  todos.md
deepagent/understanding-deepagents/question_paper_workspace/: english.md  gk.md  numerical-ability.md  questions.md  reasoning.md  science.md  todos.md
python/inventory-api/inventory-api/: pyproject.toml
(+105 files in other folders)
