[project]
name = "vertex-langchain-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.14",
    "langchain-google-genai>=4.2.1",
    "langchain-tavily>=0.2.17",
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    "hello_langchain",
    "langgraph/hello_langgraph",
]
