[project]
name = "async-subagent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.4",
    "deepagents>=0.6.11",
    "ipykernel>=7.3.0",
    "langchain-community>=0.4.2",
    "langchain-tavily>=0.2.18",
    "langchain[google-genai]>=1.3.4",
    "langgraph-cli[inmem]>=0.4.27",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
