[project]
name = "understanding-deepagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "deepagents>=0.6.8",
    "langchain[google-geanai,google-genai]>=1.3.4",
    "langgraph-cli[inmem]>=0.4.27",
]
