[project]
name = "inventory-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "navratan", email = "navyogi99@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"